--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Molokspa💅🌷</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&family=Lato:wght@400;700;900&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
-    
+    <header class="header contenedor">
+        <div class="header__grid">
+            <div class="header__logo">
+                <img src="#" alt="logo Molokspa">
+            </div>
+
+            <nav class="sociales">
+               <a class="sociales__enlace" href="https://facebook.com"><span class="sociales__accesible">Facebook</span></a>
+               <a class="sociales__enlace" href="https://twitter.com"><span class="sociales__accesible">Twitter</span></a>
+               <a class="sociales__enlace" href="https://instagram.com"><span class="sociales__accesible">Instagram</span></a>
+               <a class="sociales__enlace" href="https://pinterest.com"><span class="sociales__accesible">Pinterest</span></a> 
+               <a class="sociales__enlace" href="https://youtube.com"><span class="sociales__accesible">Youtube</span></a> 
+               <a class="sociales__enlace" href="https://tiktok.com"><span class="sociales__accesible">Tiktok</span></a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
