agregando el logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header contenedor">
         <div class="header__grid">
             <div class="header__logo">
-                <img src="#" alt="logo Molokspa">
+                <img src="src/img/logo-molok.png" alt="logo Molokspa">
             </div>
 
             <nav class="sociales">
