creando imagen de slide y agregando bienvenida

--- a/index.html
+++ b/index.html
@@ -38,5 +38,18 @@
             </nav>
         </div>
     </div>
+
+    <section class="slider contenedor">
+        <ul class="slider__contenedor">
+            <li class="slider__slide">
+                <img class="slider__imagen" src="build/img/Spa 6.jpeg" alt="imagen slide">
+            </li>
+        </ul>
+    </section>
+
+    <section class="bienvenida seccion">
+        <h1 class="bienvenida__heading">Bienvenida(o) a nuestro <span>sitio web</span></h1>
+        <p class="bienvenida__texto">Te sentirás como nueva(o) con nuestra masajista profesional</p>
+    </section>
 </body>
 </html>
