--- a/index.html
+++ b/index.html
@@ -51,5 +51,36 @@
         <h1 class="bienvenida__heading">Bienvenida(o) a nuestro <span>sitio web</span></h1>
         <p class="bienvenida__texto">Te sentirás como nueva(o) con nuestra masajista profesional</p>
     </section>
+
+    <section class="cards">
+        <div class="cards__grid contenedor">
+            <div class="card">
+                <img src="#" alt="imagen card" class="card__imagen">
+
+                <div class="card__contenido">
+                    <h2 class="card__heading">Conoce sobre <span>Nosotros</span></h2>
+                    <a href="#" class="card__enlace">Leer más</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="#" alt="imagen card" class="card__imagen">
+
+                <div class="card__contenido">
+                    <h2 class="card__heading">Nuestros <span>Servicios</span></h2>
+                    <a href="#" class="card__enlace">Leer más</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="#" alt="imagen card" class="card__imagen">
+
+                <div class="card__contenido">
+                    <h2 class="card__heading">Visita nuestra <span>Tienda</span></h2>
+                    <a href="#" class="card__enlace">Leer más</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
