--- a/index.html
+++ b/index.html
@@ -145,5 +145,12 @@
             </div>
         </div>
     </section>
+
+    
+    <section class="cita">
+        <h2 class="cita__heading">Realiza una cita</h2>
+        <p class="cita__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil assumenda blanditiis maiores ipsa earum inventore veritatis. Dolore, aut esse alias labore modi unde reiciendis obcaecati libero necessitatibus, numquam, voluptatum non.</p>
+        <a href="#" class="cita__enlace">Leer más</a>
+    </section>
 </body>
 </html>
