--- a/index.html
+++ b/index.html
@@ -152,5 +152,37 @@
         <p class="cita__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil assumenda blanditiis maiores ipsa earum inventore veritatis. Dolore, aut esse alias labore modi unde reiciendis obcaecati libero necessitatibus, numquam, voluptatum non.</p>
         <a href="#" class="cita__enlace">Leer más</a>
     </section>
+
+    <footer class="footer">
+        <div class="footer__grid contenedor">
+            <div class="footer__widget">
+                <h3 class="footer__heading">Nosotros</h3>
+                <p class="footer__texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita cum, minus atque harum maxime reprehenderit fugiat sed corrupti inventore tempora quisquam provident aut facere ipsum pariatur, esse velit blanditiis quae!</p>
+            </div>
+
+            <div class="footer__widget">
+                <h3 class="footer__heading">Nosotros</h3>
+                <p class="footer__texto">Lun-Vie: 9AM - 7PM</p>
+                <p class="footer__texto">Sábado: 9AM - 2PM</p>
+                <p class="footer__texto">Domingo: Cerrado</p>
+            </div>
+
+            <div class="footer__widget">
+                <h3 class="footer__heading">Contacto</h3>
+                <p class="footer__texto">Av. falsa 123</p>
+
+                <nav class="sociales">
+                    <a class="sociales__enlace" href="https://facebook.com"><span class="sociales__accesible">Facebook</span></a>
+                    <a class="sociales__enlace" href="https://twitter.com"><span class="sociales__accesible">Twitter</span></a>
+                    <a class="sociales__enlace" href="https://instagram.com"><span class="sociales__accesible">Instagram</span></a>
+                    <a class="sociales__enlace" href="https://pinterest.com"><span class="sociales__accesible">Pinteres</span></a> 
+                    <a class="sociales__enlace" href="https://youtube.com"><span class="sociales__accesible">Youtube</span></a> 
+                    <a class="sociales__enlace" href="https://tiktok.com"><span class="sociales__accesible">Tiktok</span></a>
+                 </nav>                     
+            </div>
+        </div>
+
+        <p class="footer__copyright">©MolokSpa & Salon. Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
