seccion principal nuestros servicios

--- a/index.html
+++ b/index.html
@@ -146,7 +146,88 @@
         </div>
     </section>
 
-    
+    <main class="productos contenedor seccion">
+        <h2 class="productos__heading">nuestros <span>servicios</span></h2>
+        <div class="productos__grid">
+            <div class="producto">
+                <div class="producto__mask">
+                    <img src="build/img/producto_01.jpg" alt="" class="producto__imagen">
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Masaje relajante</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <div class="producto__mask">
+                    <img src="build/img/producto_02.jpg" alt="" class="producto__imagen">
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Masaje drenaje linfático</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <div class="producto__mask">
+                    <img src="build/img/producto_03.jpg" alt="" class="producto__imagen">
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Maderoterpia</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <div class="producto__mask">
+                    <img src="build/img/producto_04.jpg" alt="" class="producto__imagen">
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Masaje reductor</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <div class="producto__mask">
+                    <img src="build/img/producto_04.jpg" alt="" class="producto__imagen">
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Exfoliación e hidratación de piel</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <div class="producto__mask">
+                    <img src="build/img/producto_04.jpg" alt="" class="producto__imagen">
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Masaje deportivo</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <div class="producto__mask">
+                    <img src="build/img/producto_04.jpg" alt="" class="producto__imagen">
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Masaje descontracturante</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
     <section class="cita">
         <h2 class="cita__heading">Realiza una cita</h2>
         <p class="cita__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil assumenda blanditiis maiores ipsa earum inventore veritatis. Dolore, aut esse alias labore modi unde reiciendis obcaecati libero necessitatibus, numquam, voluptatum non.</p>
