agregando las ventosas chinas y ocultando la parte de tienda

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
                 </div>
             </div>
 
-            <div class="card">
+           <!--<div class="card"> 
                 <img src="#" alt="imagen card" class="card__imagen">
 
                 <div class="card__contenido">
                     <h2 class="card__heading">Visita nuestra <span>Tienda</span></h2>
                     <a href="#" class="card__enlace">Leer más</a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -221,6 +221,17 @@
                 </div>
                 <div class="producto__contenido">
                     <h3 class="producto__nombre">Masaje descontracturante</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div>
+
+            <div class="producto">
+                <div class="producto__mask">
+                    <img src="build/img/producto_04.jpg" alt="" class="producto__imagen">
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Ventosas chinas</h3>
                     <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
                     <p class="producto__precio">$25</p>
                 </div>
