--- a/index.html
+++ b/index.html
@@ -155,8 +155,13 @@
                 </div>
                 <div class="producto__contenido">
                     <h3 class="producto__nombre">Masaje relajante</h3>
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
-                    <p class="producto__precio">$25</p>
+                    <ul>
+                        <li>Promueve la respiración profunda</li>
+                        <li>mejora el sentimiento de ansiedad</li>
+                        <li>Reduce y Elimina dolores musculares</li>
+                        <li>Fortalece la circulación</li>
+                        <li>Mejora el sistema nervioso</li>
+                    </ul>
                 </div>
             </div>
 
@@ -166,8 +171,13 @@
                 </div>
                 <div class="producto__contenido">
                     <h3 class="producto__nombre">Masaje drenaje linfático</h3>
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
-                    <p class="producto__precio">$25</p>
+                    <ul>
+                        <li>Ayuda a reabsorber los líquidos</li>
+                        <li>Tiene acción sedante ante el dolor</li>
+                        <li>Reduce inflamación</li>
+                        <li>Favorece la circulación sanguínea</li>
+                        <li>Limpia piel y activa circulación linfatica</li>
+                    </ul>
                 </div>
             </div>
 
@@ -177,8 +187,14 @@
                 </div>
                 <div class="producto__contenido">
                     <h3 class="producto__nombre">Maderoterpia</h3>
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
-                    <p class="producto__precio">$25</p>
+                    <ul>
+                        <li>Disminuye celulitis y retención de líquidos</li>
+                        <li>Tiene efecto desintoxicante</li>
+                        <li>Mejora la apariencia de la piel</li>
+                        <li>Alivia dolores musculares</li>
+                        <li>Mejora la respiración</li>
+                        <li>Estimulación de el colágeno, la vitamina e y la elastina</li>
+                    </ul>
                 </div>
             </div>
 
@@ -188,8 +204,11 @@
                 </div>
                 <div class="producto__contenido">
                     <h3 class="producto__nombre">Masaje reductor</h3>
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
-                    <p class="producto__precio">$25</p>
+                    <ul>
+                        <li>Remueve y elimina grasa localizada</li>
+                        <li>Remueve celulitis </li>
+                        <li>Beneficia la circulación sanguínea y linfatica</li>
+                    </ul>
                 </div>
             </div>
 
@@ -199,8 +218,11 @@
                 </div>
                 <div class="producto__contenido">
                     <h3 class="producto__nombre">Exfoliación e hidratación de piel</h3>
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
-                    <p class="producto__precio">$25</p>
+                    <ul>
+                        <li>Mejora la textura de la piel</li>
+                        <li>Estimula la síntesis de el colágeno, elastina y ácido hialurónico</li>
+                        <li>Contribuye a los niveles de hidratación  óptimos de la piel</li>
+                    </ul>
                 </div>
             </div>
 
@@ -210,8 +232,13 @@
                 </div>
                 <div class="producto__contenido">
                     <h3 class="producto__nombre">Masaje deportivo</h3>
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
-                    <p class="producto__precio">$25</p>
+                    <ul>
+                        <li>Prepara y calienta musculos</li>
+                        <li>Aumenta circulación</li>
+                        <li>Descarga acondiciona y recupera</li>
+                        <li>Estimula el músculo cansado</li>
+                        <li>Para tratamiento de lesion</li>
+                    </ul>
                 </div>
             </div>
 
@@ -221,8 +248,13 @@
                 </div>
                 <div class="producto__contenido">
                     <h3 class="producto__nombre">Masaje descontracturante</h3>
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
-                    <p class="producto__precio">$25</p>
+                    <ul>
+                        <li>Combate la depresión</li>
+                        <li>Coadyuvante para dormir</li>
+                        <li>Logra que los músculos recuperen la elasticidad y movilidad</li>
+                        <li>Llega a ayudar con dolores de cabeza</li>
+                        <li>Ayuda a liberar endorfinas</li>
+                    </ul>
                 </div>
             </div>
 
@@ -232,8 +264,14 @@
                 </div>
                 <div class="producto__contenido">
                     <h3 class="producto__nombre">Ventosas chinas</h3>
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, eveniet neque</p>
-                    <p class="producto__precio">$25</p>
+                    <ul>
+                        <li>Desintoxicación </li>
+                        <li>Reduce la inflamación</li>
+                        <li>Previene enfermedades</li>
+                        <li>Ayuda a la circulación</li>
+                        <li>Mantenimiento cardiovascular</li>
+                        <li>Evita los síntomas de la diabetes</li>
+                    </ul>
                 </div>
             </div>
         </div>
