creando clases en la seccion servicios del main

--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
         </div>
     </section>
 
-    <main class="productos contenedor seccion">
-        <h2 class="productos__heading">nuestros <span>servicios</span></h2>
-        <div class="productos__grid">
-            <div class="producto">
-                <div class="producto__mask">
+    <main class="servicios contenedor seccion">
+        <h2 class="servicios__heading">nuestros <span>servicios</span></h2>
+        <div class="servicios__grid">
+            <div class="servicio">
+                <div class="servicio__mask">
                     <img src="build/img/producto_01.jpg" alt="" class="producto__imagen">
                 </div>
-                <div class="producto__contenido">
-                    <h3 class="producto__nombre">Masaje relajante</h3>
+                <div class="servicio__contenido">
+                    <h3 class="servicio__nombre">Masaje relajante</h3>
                     <ul>
                         <li>Promueve la respiración profunda</li>
                         <li>mejora el sentimiento de ansiedad</li>
@@ -165,12 +165,12 @@
                 </div>
             </div>
 
-            <div class="producto">
-                <div class="producto__mask">
+            <div class="servicio">
+                <div class="servicio__mask">
                     <img src="build/img/producto_02.jpg" alt="" class="producto__imagen">
                 </div>
-                <div class="producto__contenido">
-                    <h3 class="producto__nombre">Masaje drenaje linfático</h3>
+                <div class="servicio__contenido">
+                    <h3 class="servicio__nombre">Masaje drenaje linfático</h3>
                     <ul>
                         <li>Ayuda a reabsorber los líquidos</li>
                         <li>Tiene acción sedante ante el dolor</li>
@@ -181,12 +181,12 @@
                 </div>
             </div>
 
-            <div class="producto">
-                <div class="producto__mask">
+            <div class="servicio">
+                <div class="servicio__mask">
                     <img src="build/img/producto_03.jpg" alt="" class="producto__imagen">
                 </div>
-                <div class="producto__contenido">
-                    <h3 class="producto__nombre">Maderoterpia</h3>
+                <div class="servicio__contenido">
+                    <h3 class="servicio__nombre">Maderoterpia</h3>
                     <ul>
                         <li>Disminuye celulitis y retención de líquidos</li>
                         <li>Tiene efecto desintoxicante</li>
@@ -198,12 +198,12 @@
                 </div>
             </div>
 
-            <div class="producto">
-                <div class="producto__mask">
+            <div class="servicio">
+                <div class="servicio__mask">
                     <img src="build/img/producto_04.jpg" alt="" class="producto__imagen">
                 </div>
-                <div class="producto__contenido">
-                    <h3 class="producto__nombre">Masaje reductor</h3>
+                <div class="servicio__contenido">
+                    <h3 class="servicio__nombre">Masaje reductor</h3>
                     <ul>
                         <li>Remueve y elimina grasa localizada</li>
                         <li>Remueve celulitis </li>
@@ -212,12 +212,12 @@
                 </div>
             </div>
 
-            <div class="producto">
-                <div class="producto__mask">
+            <div class="servicio">
+                <div class="servicio__mask">
                     <img src="build/img/producto_04.jpg" alt="" class="producto__imagen">
                 </div>
-                <div class="producto__contenido">
-                    <h3 class="producto__nombre">Exfoliación e hidratación de piel</h3>
+                <div class="servicio__contenido">
+                    <h3 class="servicio__nombre">Exfoliación e hidratación de piel</h3>
                     <ul>
                         <li>Mejora la textura de la piel</li>
                         <li>Estimula la síntesis de el colágeno, elastina y ácido hialurónico</li>
@@ -226,12 +226,12 @@
                 </div>
             </div>
 
-            <div class="producto">
-                <div class="producto__mask">
+            <div class="servicio">
+                <div class="servicio__mask">
                     <img src="build/img/producto_04.jpg" alt="" class="producto__imagen">
                 </div>
-                <div class="producto__contenido">
-                    <h3 class="producto__nombre">Masaje deportivo</h3>
+                <div class="servicio__contenido">
+                    <h3 class="servicio__nombre">Masaje deportivo</h3>
                     <ul>
                         <li>Prepara y calienta musculos</li>
                         <li>Aumenta circulación</li>
@@ -242,12 +242,12 @@
                 </div>
             </div>
 
-            <div class="producto">
-                <div class="producto__mask">
+            <div class="servicio">
+                <div class="servicio__mask">
                     <img src="build/img/producto_04.jpg" alt="" class="producto__imagen">
                 </div>
-                <div class="producto__contenido">
-                    <h3 class="producto__nombre">Masaje descontracturante</h3>
+                <div class="servicio__contenido">
+                    <h3 class="servicio__nombre">Masaje descontracturante</h3>
                     <ul>
                         <li>Combate la depresión</li>
                         <li>Coadyuvante para dormir</li>
@@ -258,12 +258,12 @@
                 </div>
             </div>
 
-            <div class="producto">
-                <div class="producto__mask">
+            <div class="servicio">
+                <div class="servicio__mask">
                     <img src="build/img/producto_04.jpg" alt="" class="producto__imagen">
                 </div>
-                <div class="producto__contenido">
-                    <h3 class="producto__nombre">Ventosas chinas</h3>
+                <div class="servicio__contenido">
+                    <h3 class="servicio__nombre">Ventosas chinas</h3>
                     <ul>
                         <li>Desintoxicación </li>
                         <li>Reduce la inflamación</li>
