arreglando la lista en servicios

--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
                 </div>
                 <div class="servicio__contenido">
                     <h3 class="servicio__nombre">Masaje relajante</h3>
-                    <ul>
-                        <li>Promueve la respiración profunda</li>
-                        <li>mejora el sentimiento de ansiedad</li>
-                        <li>Reduce y Elimina dolores musculares</li>
-                        <li>Fortalece la circulación</li>
-                        <li>Mejora el sistema nervioso</li>
+                    <ul class="servicio__listado">
+                        <li class="servicio__descripcion">Promueve la respiración profunda</li>
+                        <li class="servicio__descripcion">mejora el sentimiento de ansiedad</li>
+                        <li class="servicio__descripcion">Reduce y Elimina dolores musculares</li>
+                        <li class="servicio__descripcion">Fortalece la circulación</li>
+                        <li class="servicio__descripcion">Mejora el sistema nervioso</li>
                     </ul>
                 </div>
             </div>
@@ -171,12 +171,12 @@
                 </div>
                 <div class="servicio__contenido">
                     <h3 class="servicio__nombre">Masaje drenaje linfático</h3>
-                    <ul>
-                        <li>Ayuda a reabsorber los líquidos</li>
-                        <li>Tiene acción sedante ante el dolor</li>
-                        <li>Reduce inflamación</li>
-                        <li>Favorece la circulación sanguínea</li>
-                        <li>Limpia piel y activa circulación linfatica</li>
+                    <ul class="servicio__listado">
+                        <li class="servicio__descripcion">Ayuda a reabsorber los líquidos</li>
+                        <li class="servicio__descripcion">Tiene acción sedante ante el dolor</li>
+                        <li class="servicio__descripcion">Reduce inflamación</li>
+                        <li class="servicio__descripcion">Favorece la circulación sanguínea</li>
+                        <li class="servicio__descripcion">Limpia piel y activa circulación linfatica</li>
                     </ul>
                 </div>
             </div>
@@ -187,13 +187,13 @@
                 </div>
                 <div class="servicio__contenido">
                     <h3 class="servicio__nombre">Maderoterpia</h3>
-                    <ul>
-                        <li>Disminuye celulitis y retención de líquidos</li>
-                        <li>Tiene efecto desintoxicante</li>
-                        <li>Mejora la apariencia de la piel</li>
-                        <li>Alivia dolores musculares</li>
-                        <li>Mejora la respiración</li>
-                        <li>Estimulación de el colágeno, la vitamina e y la elastina</li>
+                    <ul class="servicio__listado">
+                        <li class="servicio__descripcion">Disminuye celulitis y retención de líquidos</li>
+                        <li class="servicio__descripcion">Tiene efecto desintoxicante</li>
+                        <li class="servicio__descripcion">Mejora la apariencia de la piel</li>
+                        <li class="servicio__descripcion">Alivia dolores musculares</li>
+                        <li class="servicio__descripcion">Mejora la respiración</li>
+                        <li class="servicio__descripcion">Estimulación de el colágeno, la vitamina e y la elastina</li>
                     </ul>
                 </div>
             </div>
@@ -204,10 +204,10 @@
                 </div>
                 <div class="servicio__contenido">
                     <h3 class="servicio__nombre">Masaje reductor</h3>
-                    <ul>
-                        <li>Remueve y elimina grasa localizada</li>
-                        <li>Remueve celulitis </li>
-                        <li>Beneficia la circulación sanguínea y linfatica</li>
+                    <ul class="servicio__listado">
+                        <li class="servicio__descripcion">Remueve y elimina grasa localizada</li>
+                        <li class="servicio__descripcion">Remueve celulitis </li>
+                        <li class="servicio__descripcion">Beneficia la circulación sanguínea y linfatica</li>
                     </ul>
                 </div>
             </div>
@@ -218,10 +218,10 @@
                 </div>
                 <div class="servicio__contenido">
                     <h3 class="servicio__nombre">Exfoliación e hidratación de piel</h3>
-                    <ul>
-                        <li>Mejora la textura de la piel</li>
-                        <li>Estimula la síntesis de el colágeno, elastina y ácido hialurónico</li>
-                        <li>Contribuye a los niveles de hidratación  óptimos de la piel</li>
+                    <ul class="servicio__listado">
+                        <li class="servicio__descripcion">Mejora la textura de la piel</li>
+                        <li class="servicio__descripcion">Estimula la síntesis de el colágeno, elastina y ácido hialurónico</li>
+                        <li class="servicio__descripcion">Contribuye a los niveles de hidratación  óptimos de la piel</li>
                     </ul>
                 </div>
             </div>
@@ -232,12 +232,12 @@
                 </div>
                 <div class="servicio__contenido">
                     <h3 class="servicio__nombre">Masaje deportivo</h3>
-                    <ul>
-                        <li>Prepara y calienta musculos</li>
-                        <li>Aumenta circulación</li>
-                        <li>Descarga acondiciona y recupera</li>
-                        <li>Estimula el músculo cansado</li>
-                        <li>Para tratamiento de lesion</li>
+                    <ul class="servicio__listado">
+                        <li class="servicio__descripcion">Prepara y calienta musculos</li>
+                        <li class="servicio__descripcion">Aumenta circulación</li>
+                        <li class="servicio__descripcion">Descarga acondiciona y recupera</li>
+                        <li class="servicio__descripcion">Estimula el músculo cansado</li>
+                        <li class="servicio__descripcion">Para tratamiento de lesion</li>
                     </ul>
                 </div>
             </div>
@@ -248,12 +248,12 @@
                 </div>
                 <div class="servicio__contenido">
                     <h3 class="servicio__nombre">Masaje descontracturante</h3>
-                    <ul>
-                        <li>Combate la depresión</li>
-                        <li>Coadyuvante para dormir</li>
-                        <li>Logra que los músculos recuperen la elasticidad y movilidad</li>
-                        <li>Llega a ayudar con dolores de cabeza</li>
-                        <li>Ayuda a liberar endorfinas</li>
+                    <ul class="servicio__listado">
+                        <li class="servicio__descripcion">Combate la depresión</li>
+                        <li class="servicio__descripcion">Coadyuvante para dormir</li>
+                        <li class="servicio__descripcion">Logra que los músculos recuperen la elasticidad y movilidad</li>
+                        <li class="servicio__descripcion">Llega a ayudar con dolores de cabeza</li>
+                        <li class="servicio__descripcion">Ayuda a liberar endorfinas</li>
                     </ul>
                 </div>
             </div>
@@ -264,13 +264,13 @@
                 </div>
                 <div class="servicio__contenido">
                     <h3 class="servicio__nombre">Ventosas chinas</h3>
-                    <ul>
-                        <li>Desintoxicación </li>
-                        <li>Reduce la inflamación</li>
-                        <li>Previene enfermedades</li>
-                        <li>Ayuda a la circulación</li>
-                        <li>Mantenimiento cardiovascular</li>
-                        <li>Evita los síntomas de la diabetes</li>
+                    <ul class="servicio__listado">
+                        <li class="servicio__descripcion">Desintoxicación </li>
+                        <li class="servicio__descripcion">Reduce la inflamación</li>
+                        <li class="servicio__descripcion">Previene enfermedades</li>
+                        <li class="servicio__descripcion">Ayuda a la circulación</li>
+                        <li class="servicio__descripcion">Mantenimiento cardiovascular</li>
+                        <li class="servicio__descripcion">Evita los síntomas de la diabetes</li>
                     </ul>
                 </div>
             </div>
