--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <section class="cita">
         <h2 class="cita__heading">Realiza una cita</h2>
         <p class="cita__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil assumenda blanditiis maiores ipsa earum inventore veritatis. Dolore, aut esse alias labore modi unde reiciendis obcaecati libero necessitatibus, numquam, voluptatum non.</p>
-        <a href="#" class="cita__enlace">Leer más</a>
+        <a href="https://wa.me/+573214904192?text=¡Estoy+interesad@!" class="cita__enlace">Leer más</a>
     </section>
 
     <footer class="footer">
